--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: "3.7"
 
 services:
-  unaa_app:
-    container_name: unaa_app
+  monitoring_app:
+    container_name: monitoring_app
     restart: always
     build:
       context: .
@@ -14,19 +14,5 @@ services:
     env_file: .env
     ports:
       - 127.0.0.1:8000:8000
-    links:
-      - db
-    depends_on:
-      - db
-
-  db:
-    container_name: monitoring_db
-    restart: always
-    image: postgres:12.4-alpine
-    volumes:
-      - postgres-data:/var/lib/postgresql/data/
-    env_file: .env
-    expose:
-      - 5432
 volumes:
-  postgres-data:
+  unaa-data:
