--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -1,14 +1,20 @@
-FROM python:3.9-alpine3.12
+FROM python:3.8.6-alpine3.12
 ENV PYTHONUNBUFFERED 1
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV TZ=Asia/Bishkek
 
-RUN apk add --no-cache jpeg-dev \
-    gcc postgresql-dev \
+RUN apk add --no-cache tzdata \
+    jpeg-dev gcc postgresql-dev \
     linux-headers musl-dev libffi-dev \
     libxml2-dev libxslt-dev imagemagick-dev \
-    zlib-dev py3-magic  make \
-    && rm -rf /var/apt/list/*
+    zlib-dev py3-magic make \
+    build-base \
+    python3-dev \
+    py3-numpy \
+    cmake \
+    libressl-dev \
+    libffi-dev
+
 WORKDIR /app
 
 COPY requirements.txt requirements.txt
