--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
-SECRET_KEY="django-insecure-rimx^u#tvrnmitiesld41u4*v9c&=($e2m8d@l5y+ozw(=y3+eh+q"
+SECRET_KEY="CtH7h|{oEg6qJ}DijQmJ~JgCswh1A745p~KAD4L|fvedseWIX0sie~D*1%sj%p{dZsS?v7Qa3p~q#cF7NhelW@^u#tvrnmitiesld41u4*v9c&=($e2m8d@l5y+ozw(=y3+eh+q"
 
-POSTGRES_DB=db
-POSTGRES_USER=posgres_db
+POSTGRES_DB=db_monitoring
+POSTGRES_USER=monitoring_db
 POSTGRES_PASSWORD=ZAQ12345tgb
-POSTGRES_HOST=db
+POSTGRES_HOST=10.11.13.159
 DEBUG=False
