--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -1,27 +1,26 @@
-# Use the official Python base image
 FROM python:3.9-alpine3.12
+ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV TZ=Asia/Bishkek
 
-# Install build dependencies
-RUN apk add --no-cache \
-    build-base \
-    libffi-dev \
-    openssl-dev \
-    cargo  # Install Rust and Cargo for compiling Rust extensions
+RUN apk add --no-cache build-base \
+    gcc postgresql-dev \
+    linux-headers musl-dev libffi-dev \
+    libxml2-dev libxslt-dev imagemagick-dev \
+    zlib-dev py3-magic make make python3-dev \
+    && rm -rf /var/apt/list/*
 
-# Set the working directory in the container
+# Установка Gunicorn
+RUN pip install --upgrade pip && pip install gunicorn
+
 WORKDIR /app
 
-# Copy the requirements.txt file
 COPY requirements.txt requirements.txt
 
-# Install Python dependencies
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
-# Copy the current directory contents into the container at /app
 COPY . .
 
-# Expose port 8000
 EXPOSE 8000
 
-# Command to run the FastAPI application
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+ENTRYPOINT ["sh", "./dockerfiles/docker-entrypoint.sh"]
