--- a/dockerfiles/Dockerfile
+++ b/dockerfiles/Dockerfile
@@ -1,5 +1,4 @@
-# Устанавливаем базовую образу Alpine Linux
-FROM python:3.10-slim-buster AS builder
+FROM python:3.9-alpine3.12
 
 # Устанавливаем зависимости для сборки
 RUN apk add --no-cache \
