--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ SECRET_KEY="CtH7h|{oEg6qJ}DijQmJ~JgCswh1A745p~KAD4L|fvedseWIX0sie~D*1%sj%p{dZsS?
 POSTGRES_DB=db_monitoring
 POSTGRES_USER=monitoring_db
 POSTGRES_PASSWORD=ZAQ12345tgb
-POSTGRES_HOST=db_monitoring
+POSTGRES_HOST=db
 DEBUG=False
