--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,7 +22,7 @@ services:
   db:
     container_name: db
     restart: always
-    image: postgres:12.4-alpine
+    image: postgres:14
     volumes:
       - postgres-data:/var/lib/postgresql/data/
     env_file: .env.example
