--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,8 +16,10 @@ services:
       - 127.0.0.1:8000:8000
     links:
       - db
+      - redis
     depends_on:
-        - db
+      - db
+      - redis
 
   db:
     container_name: db
@@ -28,6 +30,13 @@ services:
     env_file: .env.example
     expose:
       - 5432
+
+  redis:
+    container_name: redis
+    restart: always
+    image: redis:latest
+    expose:
+      - 6379
 
 volumes:
   postgres-data:
